2013-10-06 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* filter.c:
	    * Add feature to recognize 3rd-party frames by type (t/3)
	    * Enable support of D filter (they are meaningful at RF too)

	* filter.c, aprx.c, aprx.h, config.c:
	    * Fix M filter preparation to include cos(lat).

	* aprx.h, interface.c, parse_aprs.c:
	    Always look inside 3rd party APRS frames too to determine
	    their content for filtering uses. RF->RF relaying didn't
	    do that.

2013-10-05 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* configure.in, Makefile.in, aprx.c, aprx.8.in:
	    Support integrated binary version printout:
	         aprx -V

	* configure.in, Makefile.in:
	     Preparing for new code features, picking up more
	     library locations.

	* aprsis.c:
	     Improve the error diagnostics on upstream socket
	     connection error situations.

	* beacon.c:
	     Debug report number of parsed beacons.

2013-10-03 Geoffrey F4FXL <max@planetemax.com>

	* digipeater.c:
	    Fixed badly formatted AX.25 after insertion of MYCALL
	    value on VIA path. The end-pointer was mis-managed.

2013-08-10 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* configure.in:
	    Look for OpenSSL library, SCTP network protocol.

2013-08-03 Heikki Hannikainen  <oh7lzb@sral.fi>

	* aprsis.c, aprs-complex.conf.in, aprx.8.in, aprx.conf.in,
	  doc/aprx-manual.odt:
	    Require manually configured APRS-IS passcode.

2013-08-03 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* agwpesocket.c, aprsis.c, beacon.c, cellmalloc.c, dprsgw.c,
	  dupecheck.c, filter.c, historydb.c, keyhash.c, pbuf.c,
	  telemetry.c, ttyreader.c:
	    Coding style change: Use cmalloc() instead of malloc() + memset().

2013-08-03 Frank Knobbe <frank@knobbe.us>

	* interface.c:
	    Correct the way how messages are passed from APRS-IS to RF.
	    There was a parse bug around pb->dstname field.

2013-04-25 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* netax25.c: